# PPUU-FerryGym

./: .gitattributes  .gitignore  README.md  dataloader.py  map_i80.py  models.py  play_maps.py  pyproject.toml  test-notebook.ipynb  train_cost.py
.devcontainer/: Dockerfile  Pipfile  README.md  devcontainer.json  docker-compose.yml  environment.yaml  explicit-list.txt
PPUU/: dataloader.py  dataloader_test.py  dataloader_testbook.ipynb  empty_neighbourhood.npy  models.py  ppuu_utils.py  train_fm.py  train_fm_syntetic.py  train_fm_vae.py
PPUU/Peachtree/: README.md
PPUU/model_recerpies/: fm-dnn-syntetic-mix-14-04.py  fm-dnn-syntetic-mix-27-10.py  fm-dnn-syntetic-mix.py  fm-dnn-syntetic.py  train_IL-3-11.py  train_MPER-dnn-mix-towards-target-1-11.py  train_MPER-dnn-mix-towards-target-only-state.py  train_MPER-dnn-mix-towards-target.py  train_MPUR-vae-mix-3-11.py  train_MPUR-vae-mix.py  train_fm_vae-mix-29-10.py  train_fm_vae-mix-finetune-1-11.py  train_fm_vae-mix-finetune.py  train_fm_vae-mix.py
PPUU/results/: utils.py
PPUU/results/1-11-vae-mix/: model=fwd-cnn-vae-fp-layers=3-bsize=8-ncond=10-npred=20-lrt=0.0001-nfeature=256-dropout=0.1-nz=32-beta=1e-06-zdropout=0.5-gclip=5.0-warmstart=1-seed=1.step100000.model  notebook.ipynb
PPUU/results/29-10-dnn-mix/: model=fwd-cnn-layers=3-bsize=8-ncond=10-npred=20-lrt=0.0001-nfeature=256-dropout=0.1-gclip=5.0-warmstart=0-seed=1-syntetic.step100000.model  model=fwd-cnn-layers=3-bsize=8-ncond=10-npred=20-lrt=0.0001-nfeature=256-dropout=0.1-gclip=5.0-warmstart=0-seed=1-syntetic.step320000.model  notebook.ipynb
PPUU/results/batches/: going-south-working.pth  not-right.pth  other-ship.pth
PPUU/results/policy/4-11-MPUR-new-cost/: MPUR-rev-initial-speed.txt  notebook.ipynb
preprocessing/: preprocess-dataset.ipynb  repreprocess-dataset.ipynb
